--- a/app/Resources/views/default/map1.html.twig
+++ b/app/Resources/views/default/map1.html.twig
@@ -14,7 +14,7 @@
 			<div id="map" class="col-md-12 carte">
 			</div>
 			<div class="col-md-12 tableau">
-  				<h3>Pizzeria</h3>
+  				<h3>Gare</h3>
           <h3>Indice :</h3>
           <h3>Temps restant:
             <div id="compteur"></div>
@@ -51,29 +51,31 @@ function initialize() {
       });
   map.setStreetView(panorama);
 
-  var gare_chartres = new google.maps.LatLng(48.4482023,1.481312800);
+  var arrivee = new google.maps.LatLng(48.4482023,1.481312800);
   var compteur=document.getElementById('compteur');
   var distance_target=document.getElementById('distance_target');
   var statut=document.getElementById('statut');
   statut.innerHTML= "Partie en cours..";
+
   
+
   panorama.addListener('position_changed', function() {
 
      var latitude = panorama.getPosition().lat();
      var longitude = panorama.getPosition().lng();
      var current = new google.maps.LatLng(latitude,longitude);
-     distance_precise = google.maps.geometry.spherical.computeDistanceBetween( gare_chartres, current );
+     distance_precise = google.maps.geometry.spherical.computeDistanceBetween( arrivee, current );
      distance = distance_precise.toFixed(2);
      distance_target.innerHTML= distance +" "+"mètres";
      
-     if (distance<50) {
-        statut.innerHTML= "Gagné, vous êtes à la gare !";
-     }
+     if (distance<20) {
+        statut.innerHTML= "Gagné, mission accomplie !";
+    }
   });
 
 }
 
-var duree="180";
+var duree="60";
 t();
 
 function t() {
@@ -82,6 +84,10 @@ function t() {
   s=duree;
   m=0;
   h=0;
+
+  if(s<0) {
+    statut.innerHTML="Perdu, essaie encore !<br />"+"<a href=http://lien1.fr></a>";
+  }
   
   if(s<0) {
     compteur.innerHTML="terminé<br />"+"<a href=http://lien1.fr></a>";
