--- a/app/Resources/views/default/mission1.html.twig
+++ b/app/Resources/views/default/mission1.html.twig
@@ -19,11 +19,11 @@
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-3"><h3>QUOI:</h3></div>
-					<div class="col-md-9"><h3>TROUVER UNE PIZZERIA</h3></div>
+					<div class="col-md-9"><h3>TROUVER LA GARE</h3></div>
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-6"><h3>EN : </h3></div>
-					<div class="col-md-6"><h3> 3 MINUTES</h3></div>
+					<div class="col-md-6"><h3> 1 MINUTE</h3></div>
 				</div>
 				
 			</div><div class="col-md-12">
