--- a/app/Resources/views/default/mission2.html.twig
+++ b/app/Resources/views/default/mission2.html.twig
@@ -19,11 +19,11 @@
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-3"><h3>QUOI:</h3></div>
-					<div class="col-md-9"><h3>TROUVER UNE PHARMACIE</h3></div>
+					<div class="col-md-9"><h3>TROUVER LA PHARMACIE DESPREZ BUIS</h3></div>
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-6"><h3>EN : </h3></div>
-					<div class="col-md-6"><h3> 4 MINUTES</h3></div>
+					<div class="col-md-6"><h3> 2 MINUTES</h3></div>
 				</div>
 				
 			</div><div class="col-md-12">
