--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -66,7 +66,7 @@
     <br>
     <div class="row">
         <div class="col-lg-offset-2 col-md-offset-2 col-lg-8 col-md-8">
-            <input class="login btn-primary btn-lg" type="submit" id="_submit" name="_submit" value={{ 'security.login.submit'|trans }} /><a href="{{ path('user_register') }}"><button type="button" class="btn btn-primary">Rejoins nous !</button></a>
+            <input class="login btn-primary btn-lg" type="submit" id="_submit" name="_submit" value={{ 'security.login.submit'|trans }} /><a href="{{ path('registration') }}"><button type="button" class="btn btn-primary">Rejoins nous !</button></a>
         </div>
     </div>
 </form>
