--- a/app/Resources/views/default/map1.html.twig
+++ b/app/Resources/views/default/map1.html.twig
@@ -17,10 +17,10 @@
   				<h3>Gare</h3>
           <h3>Indice :</h3>
           <h3>Temps restant:
-            <div id="compteur"></div>
+            <div id="compteur" class="compteur"></div>
           </h3>
           <h3>Distance de la cible :
-            <div id="distance_target"></div>
+            <div id="distance_target" class="target"></div>
           </h3>
           <h3>
             <div id="statut"></div>
