--- a/app/Resources/views/default/map2.html.twig
+++ b/app/Resources/views/default/map2.html.twig
@@ -17,7 +17,7 @@
 				<h3>Pharmacie Marceau</h3>
         <h3>Indice :</h3>
         <h3>Temps restant:
-          <div id="compteur"></div>
+          <div id="compteur" class="compteur"></div>
           </h3>
           <h3>Distance de la cible :
             <div id="distance_target"></div>
