--- a/app/Resources/views/default/mission3.html.twig
+++ b/app/Resources/views/default/mission3.html.twig
@@ -19,11 +19,11 @@
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-3"><h3>QUOI: </h3></div>
-					<div class="col-md-9"><h3>TROUVER UNE BANQUE</h3></div>
+					<div class="col-md-9"><h3>TROUVER L'ACAD</h3></div>
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-6"><h3>EN : </h3></div>
-					<div class="col-md-6"><h3> 2 MINUTES</h3></div>
+					<div class="col-md-6"><h3> 30 SECONDES</h3></div>
 				</div>
 				
 			</div><div class="col-md-12">
