--- a/app/Resources/views/default/home.html.twig
+++ b/app/Resources/views/default/home.html.twig
@@ -3,23 +3,23 @@
 {% block body %}
 
 <div class="page_choix_missions">
-    <h1>Choisis ta Mission</h1>
+    <h1><div class="titre1"><strong>Choisis ta Mission</strong></div></h1>
     <div class="row container-fluid">
     	<div class="col-md-12 missions_line">
-    		<div class="col-md-3 col-md-offset-2 mission_block"><a href="{{ path('mission1') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/gare.png') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
-    		Gare</p>
+    		<div class="col-md-2 col-md-offset-4 mission_block"><a href="{{ path('mission1') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/gare.png') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
+    		</p>
   			</a></div>
-    		<div class="col-md-3 col-md-offset-2 mission_block"><a href="{{ path('mission2') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/pharmacie.jpg') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
-    		Pharmacie</p>
+    		<div class="col-md-2 col-md-offset-2 mission_block"><a href="{{ path('mission2') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/pharmacie.jpg') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
+    		</p>
   			</a></div>
 		</div>
 		<div class="col-md-12 vide1"></div>
     	<div class="col-md-12 missions_line">
-    		<div class="col-md-3 col-md-offset-2 mission_block"><a href="{{ path('mission3') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/acad.jpg') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
-    		Acad</p>
+    		<div class="col-md-2 col-md-offset-4 mission_block"><a href="{{ path('mission3') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/acad.jpg') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
+    		</p>
   			</a></div>
-    		<div class="col-md-3 col-md-offset-2 mission_block"><a href="{{ path('mission4') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/boulangerie.jpg') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
-    		Boulangerie</p>
+    		<div class="col-md-2 col-md-offset-2 mission_block"><a href="{{ path('mission4') }}"><img style="position: relative; left:0;top:0;"width="100%" height="100%"id="1" src="{{ asset ('img/boulangerie.jpg') }}" /><p style="width: 250px; height: 150px; top: 100px; left: 32px; margin: 0; position: absolute; color: black; font-size:35px;">
+    		</p>
   			</a></div>
 		</div>
 	</div>
