--- a/app/Resources/views/default/map3.html.twig
+++ b/app/Resources/views/default/map3.html.twig
@@ -47,7 +47,6 @@ function initialize() {
         }
       });
   map.setStreetView(panorama);
-
   var arrivee = new google.maps.LatLng(48.447661,1.486317);
   var compteur=document.getElementById('compteur');
   var distance_target=document.getElementById('distance_target');
@@ -83,11 +82,11 @@ function t() {
   h=0;
 
   if(s<0) {
-    statut.innerHTML="Perdu, essaie encore !<br />"+"<a href=http://lien1.fr></a>";
+    statut.innerHTML="Perdu, essaie encore !";
   }
   
   if(s<0) {
-    compteur.innerHTML="terminé<br />"+"<a href=http://lien1.fr></a>";
+    compteur.innerHTML="Terminé";
   } else if (distance<50) {
         if(s>59) {
           m=Math.floor(s/60);
@@ -103,7 +102,7 @@ function t() {
         if(m<10) {
           m="0"+m
         }
-    compteur.innerHTML=h+":"+m+":"+s+"<br /><a href=http://lien2.fr></a>"
+    compteur.innerHTML=/*h+":"+*/m+":"+s
     return;
     }
     else  {
@@ -121,7 +120,7 @@ function t() {
       if(m<10) {
         m="0"+m
       }
-      compteur.innerHTML=h+":"+m+":"+s+"<br /><a href=http://lien2.fr></a>"
+      compteur.innerHTML=/*h+":"+*/m+":"+s
       }
             
       duree=duree-1;
