--- a/app/Resources/views/default/mission1.html.twig
+++ b/app/Resources/views/default/mission1.html.twig
@@ -25,13 +25,13 @@
 					<div class="col-md-6"><h3>EN : </h3></div>
 					<div class="col-md-6"><h3> 1 MINUTE</h3></div>
 				</div>
-				
-			</div><div class="col-md-12">
-					<div class="col-md-5">
+				<div class="col-md-12">
+					<div class="col-md-10">
 					</div>
-					<div class="col-md-7"><a href="{{ path('map1') }}"><input type="submit" class="btn-lg btn-primary" value="GO"/>
-				</a></div>
+					<div class="col-md-2"><a href="{{ path('map1') }}"><input type="submit" class="btn-lg btn-warning" value="GO"/>
+					</a></div>
 				</div>
+			</div>
 
 		</div>
 </div>
