--- a/app/Resources/views/default/mission3.html.twig
+++ b/app/Resources/views/default/mission3.html.twig
@@ -26,11 +26,12 @@
 					<div class="col-md-6"><h3> 30 SECONDES</h3></div>
 				</div>
 				
-			</div><div class="col-md-12">
-					<div class="col-md-5">
+				<div class="col-md-12">
+						<div class="col-md-10">
+						</div>
+						<div class="col-md-2"><a href="{{ path('map3') }}"><input type="submit" class="btn-lg btn-warning" value="GO"/>
+						</a></div>
 					</div>
-					<div class="col-md-7"><a href="{{ path('map3') }}"><input type="submit" class="btn-lg btn-primary" value="GO"/>
-				</a></div>
 				</div>
 
 		</div>
