--- a/app/Resources/views/default/mission4.html.twig
+++ b/app/Resources/views/default/mission4.html.twig
@@ -19,19 +19,19 @@
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-3"><h3>QUOI : </h3></div>
-					<div class="col-md-9"><h3>TROUVER UNE BOULANGERIE</h3></div>
+					<div class="col-md-9"><h3>TROUVER LA BOULANGERIE DE LA PORTE GUILLAUME</h3></div>
 				</div>
 				<div class="col-md-12">
 					<div class="col-md-6"><h3>EN : </h3></div>
 					<div class="col-md-6"><h3> 5 MINUTES</h3></div>
 				</div>
-				
-			</div><div class="col-md-12">
-					<div class="col-md-5">
+				<div class="col-md-12">
+					<div class="col-md-10">
 					</div>
-					<div class="col-md-7"><a href="{{ path('map4') }}"><input type="submit" class="btn-lg btn-primary" value="GO"/>
-				</a></div>
+					<div class="col-md-2"><a href="{{ path('map4') }}"><input type="submit" class="btn-lg btn-warning" value="GO"/>
+					</a></div>
 				</div>
+			</div>
 
 		</div>
 </div>
